Fix page width on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,6 @@
 
 $spacing-unit:     30px !default;
 
-.inner {
-  width: 800px;
-  margin: 0 auto;
-}
-
 header {
   padding-top: 12px;
   padding-bottom: 0px;
@@ -93,3 +88,51 @@ hr {
     list-style: none;
   }
 }
+
+// Page width
+
+.inner {
+  width: 800px;
+  margin: 0 auto;
+}
+
+#container .inner img {
+  max-width: 100%;
+}
+
+/* Smaller than standard 960 (devices and browsers) */
+@media only screen and (max-width: 959px) { }
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) { }
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+  header {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  #downloads {
+    margin-bottom: 25px;
+  }
+  #download-zip, #download-tar-gz {
+    display: none;
+  }
+  .inner {
+    width: 94%;
+    margin: 0 auto;
+  }
+  ul li {
+    margin-left: 10px;
+    padding-left: 10px;
+  }
+  ol li {
+    margin-left: 10px;
+  }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) { }
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) { }
